End Lesson 10/8/2025 Finishing set up process; today's lesson

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -23,8 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "39ca82c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv(\"data/train.csv\")\n",
+    "test = pd.read_csv(\"data/test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9be5bc6c",
+   "metadata": {},
+   "source": [
+    "- Okay, bila read_csv, kena tulis CS baru Tab\n",
+    "- Boleh tekan arrow bawah utk auto complete\n",
+    "- directory should not start with /\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52425f31",
    "metadata": {},
    "outputs": [],
    "source": []
